--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -1,8 +1,8 @@
 <div>
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <h2 jhiTranslate="password.title" translateValues="{username: '{{account.login}}'}" *ngIf="account">Password for [<b>{{account.login}}</b>]</h2>
 
+        <div class="col-md-8">
+            <h1><i class="fa fa-unlock"></i> Nueva contraseña para el Usuario: {{account.login}}</h1>
             <div class="alert alert-success" *ngIf="success" jhiTranslate="password.messages.success">
                 <strong>Password changed!</strong>
             </div>
