--- a/src/main/webapp/app/admin/health/health.component.html
+++ b/src/main/webapp/app/admin/health/health.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="health">
     <h2>
         <span jhiTranslate="health.title">Health Checks</span>
         <button class="btn btn-primary float-right" (click)="refresh()">
