--- a/src/main/webapp/app/admin/metrics/metrics.component.html
+++ b/src/main/webapp/app/admin/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-left: 10%;">
     <h2>
         <span jhiTranslate="metrics.title">Application Metrics</span>
         <button class="btn btn-primary float-right" (click)="refresh()">
@@ -176,7 +176,7 @@
             </tbody>
         </table>
     </div>
-    
+
     <h3 jhiTranslate="metrics.cache.title">Cache statistics</h3>
     <div class="table-responsive" *ngIf="!updatingMetrics">
         <table class="table table-striped">
@@ -214,7 +214,7 @@
             </tbody>
         </table>
     </div>
-    
+
     <h3 jhiTranslate="metrics.datasource.title" *ngIf="metrics.gauges && metrics.gauges['HikariPool-1.pool.TotalConnections'] && metrics.gauges['HikariPool-1.pool.TotalConnections'].value > 0">DataSource statistics (time in millisecond)</h3>
     <div class="table-responsive" *ngIf="!updatingMetrics && metrics.gauges && metrics.gauges['HikariPool-1.pool.TotalConnections'] && metrics.gauges['HikariPool-1.pool.TotalConnections'].value > 0">
         <table class="table table-striped">
