--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"></a>
     <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
         <h1 id="fh5co-logo" class="mx-2">
-            <a href="/">PuigTheSong</a>
+            <a href="/" id="txt">PuigTheSong</a>
         </h1>
         <nav id="fh5co-main-menu" role="navigation" [ngSwitch]="isAuthenticated()">
             <ul>
@@ -11,7 +11,7 @@
                     <a routerLink="/" routerLinkActive="active">Home</a>
                 </li>
                 <li>
-                    <a routerLink="pageregister-pages" routerLinkActive="active">PuigTheSong Tour</a>
+                    <a routerLink="pageregister-pages" routerLinkActive="active">Tour</a>
                 </li>
                 <li>
                     <a href="#caracteristicas">Características</a>
