--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -8,7 +8,7 @@
 
 .fondo{
     background-size: cover;
-    background-color: #d6cece!important;
+    background-color: white!important;
     float:right!important;
     width:90%!important;
 }
