--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,6 +1,3 @@
-<p>
-<div class="col-md-12" id="top" style="text-align: center" [ngStyle]="{'display':displayTitle}"><h1 class="top"><i class="fa fa-globe fa-lg"> </i> TOP PAISES</h1></div>
-</p>
 <div [ngStyle]="{'display':displayCountry}">
     <div class="picture-grid">
         <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('alemania')">
@@ -123,19 +120,38 @@
     <div class="fondo" [ngStyle]="{'display':displayMain}">
         <!-- Page Content Holder -->
 
-        <div class="row">
-                <div class="col-sm-12 buscador">
-                    <br>
-                    <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
-                    <button class="btn-p" id="b"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
-                    <p>
-                    <div class="col-md-12 the-icons" style="text-align: center" [ngStyle]="{'display':displayTitleBuscador}"><h1 class="less"><span class="glyphicon glyphicon-search" style="font-size: 19px;"> </span> Búsquedas</h1></div>
-                    </p>
-                </div><br><br>
-            <!--
-               <div class="row">
-                <div class="col-lg-10" style="text-align: center"><h1 [ngStyle]="{'display':displayMain}"><span class="glyphicon glyphicon-search"></span> Búsquedas</h1></div>
-                </div> -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <div id="imaginary_container">
+                        <div class="input-group stylish-input-group">
+                            <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
+                            <span class="input-group-addon">
+                    <button (click)="searchSong()">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><br><br>
+          <div class="row">
+              <nav class="navbar navbar-expand-sm bg-light navbar-light">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" (click)="changeCountry()" >Cambiar País</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Canciones</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Artistas</a>
+                  </li>
+              </ul>
+              </nav>
+          </div>
                 <div class="row">
                     <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6 cols-xs-8">
                         <div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
@@ -156,19 +172,8 @@
                     </div>
                     <div class="row">
 <br><br>
-                        <div class="col-sm-12 col-lg-12" style="text-align: center" [ngStyle]="{'display':displayMas}">  <button class="fa fa-plus fa-lg mas" (click)="searchSongMas()"> Ver más</button></div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-sm-12 col-lg-12" style="text-align: center"> <h2><span class="glyphicon glyphicon-music"></span> Top Canciones</h2></div>
-
-                </div>
-            <div class="row">
-            <div class="col-sm-12 col-lg-12">
-                <button class="fa fa-globe fa-lg" id="mundo"(click)="changeCountry()"></button>
-            </div>
-            </div>
                 <div class="row">
                     <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-3 col-md-4 col-sm-6 image-top">
                         <div class="cover img-responsive" [style.background-image]="sanitizeImage(data.albumId)">
@@ -205,16 +210,7 @@
                     <br>
                     <br>
                 </div>
-            <div class="row">
-<br>
-                <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg mas" (click)="topSongMas()"> Ver más</button></div>
-            </div>
-                <div class="row" >
-                    <div class="col-md-12" style="text-align: center"><h2><span class="glyphicon glyphicon-star"></span> Top Artistas</h2></div>
-                </div><br>
-                <div class="row" >
-                    <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg mas"> Ver más</button></div>
-                </div><br>
+
             </div>
         </div>
 </div>
