Pagina home (propuesta Borja - Julio/Llauna)

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"></a>
     <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
         <h1 id="fh5co-logo" class="mx-2">
-            <a href="/" id="txt">PuigTheSong</a>
+            <a href="/">PuigTheSong</a>
         </h1>
         <nav id="fh5co-main-menu" role="navigation" [ngSwitch]="isAuthenticated()">
             <ul>
@@ -11,7 +11,7 @@
                     <a routerLink="/" routerLinkActive="active">Home</a>
                 </li>
                 <li>
-                    <a routerLink="pageregister-pages" routerLinkActive="active">Tour</a>
+                    <a routerLink="pagehome-phome" routerLinkActive="active">Tendencias</a>
                 </li>
                 <li>
                     <a href="#caracteristicas">Características</a>
@@ -109,22 +109,22 @@
             <ul>
                 <li>
                     <a href="#">
-                        <i class="icon-facebook2"></i>
+                        <i class="fa fa-facebook"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="icon-twitter2"></i>
+                        <i class="fa fa-twitter"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="icon-instagram"></i>
+                        <i class="fa fa-instagram"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="icon-linkedin2"></i>
+                        <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
