--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -8,7 +8,7 @@
     background-size: cover;
     background-color: white!important;
     float:right!important;
-    width:90%!important;
+    width:85%!important;
     display: none;
 }
 #imaginary_container{
@@ -834,7 +834,7 @@ a {
         justify-items: center;
         grid-gap: 0;
         grid-row-gap: 0;
-        margin-left: -24px;
+        margin-left: 6%;
     }
 
     .grid-box img{
