--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -107,8 +107,25 @@
                     Login
                 </a>
             </div>
+            <div style="text-align:center!important; margin-left:32%!important;">
+                <p>
+                    <small>Desarrollado por los <b>Llaunes</b> (Julio, Bryan, Borja, David y Javi).
+                    </small>
+                </p>
+            <p>
+
+                <i class="fa fa-facebook"></i>
+
+                <i class="fa fa-twitter"></i>
+
+                <i class="fa fa-instagram"></i>
+
+                <i class="fa fa-linkedin"></i>
+
+            </p>
+            </div>
         </div>
-        <br>
     </div>
+
 </div>
 
