--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -13,12 +13,23 @@
 *
 * ======================================================= */
 body {
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif!important;
     font-weight: 300;
     font-size: 14px;
     line-height: 1.6;
     color: rgba(0, 0, 0, 0.5);
     background: whitesmoke;
+}
+li:visited{
+color: #000000; text-decoration: none;
+
+}
+a{
+    font-family: Oswald, sans-serif!important;
+}
+a:visited{
+    color: #000000; text-decoration: none;
+
 }
 hr{
     color:white!important;
@@ -54,9 +65,10 @@ p {
     margin-bottom: 1.5em;
 }
 
+
 h1, h2, h3, h4, h5, h6 {
     color: #000;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif;
     font-weight: 400;
     margin: 0 0 30px 0;
 }
@@ -72,7 +84,7 @@ figure figcaption {
     margin: 20px auto 0px auto;
     color: #b3b3b3;
     font-style: italic;
-    font-family: Dosis, sans-serif;
+    font-family: Oswald, sans-serif;
 }
 /*@media screen and (max-width: 480px) {
     figure figcaption {
@@ -108,6 +120,7 @@ figure figcaption {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
+    background-color:whitesmoke!important;
 }
 /*@media screen and (max-width: 1200px) {
     #fh5co-aside {
@@ -126,7 +139,7 @@ figure figcaption {
 }*/
 #fh5co-aside #fh5co-logo {
     text-align: center;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif;
     /*font-weight: 600;*/
     margin-bottom: 2em;
     text-transform: uppercase;
@@ -170,7 +183,7 @@ figure figcaption {
     position: relative;
     padding: 10px 10px;
     letter-spacing: .2em;
-    font-family: Dosis, sans-serif;
+    font-family: Oswald, sans-serif;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
@@ -375,14 +388,14 @@ figure figcaption {
     margin: 0;
     padding: 0;
     color: white;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
     margin-bottom: 20px;
     font-size: 45px;
     line-height: 1.3;
     font-weight: 100;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif;
 }
 /*@media screen and (max-width: 768px) {
     #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -857,7 +870,7 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
 .btn {
     margin-right: 4px;
     margin-bottom: 4px;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: Oswald, sans-serif;
     font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
@@ -904,7 +917,7 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
     color: #fff;
 }
 .btn-secondary {
-    font-family: Dosis, sans-serif;
+    font-family: Oswald, sans-serif;
     font-size: 14px;
     background: #228896;
     color: #fff;
