--- a/src/main/webapp/app/shared/login/login.css
+++ b/src/main/webapp/app/shared/login/login.css
@@ -21,7 +21,7 @@
     height: 35px!important;
     color:black!important;
     width: 200px!important;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: Oswald, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
 
