--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -3,18 +3,12 @@
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"></a>
     <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
         <h1 id="fh5co-logo" class="mx-2">
-            <a href="/">PuigTheSong</a>
+            <a href="/"><img src="../../../content/images/logo.png" height="200px" width="200px"/></a>
         </h1>
         <nav id="fh5co-main-menu" role="navigation" [ngSwitch]="isAuthenticated()">
             <ul>
-                <li>
-                    <a routerLink="/" routerLinkActive="active">Home</a>
-                </li>
-                <li>
+                <li *ngSwitchCase="true">
                     <a routerLink="pagehome-phome" routerLinkActive="active">Tendencias</a>
-                </li>
-                <li>
-                    <a href="#caracteristicas">Características</a>
                 </li>
                 <li *ngSwitchCase="true">
                     <a routerLink="pagesong-pages" routerLinkActive="active">Artistas</a>
