--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -1,67 +1,50 @@
 <div class="modal-header">
-    <div class="logo">
-        <img src="../../../content/images/logo.png" height="225" width="225"/>
-
-    </div>
-    <button id="close" aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span></button>
+    <h4 class="modal-title">Sign in</h4>
+    <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span>
+    </button>
 </div>
-<div class="body">
-<ngb-tabset>
-    <ngb-tab title="LOGIN" style="background-color:black!important">
-        <ng-template ngbTabContent>
-            <div class="modal-body">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="alert alert-danger" *ngIf="authenticationError" jhiTranslate="login.messages.error.authentication">
-                            <strong>Failed to sign in!</strong> Please check your credentials and try again.
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-
-                        <form class="form" role="form" (ngSubmit)="login()">
-                            <p>
-                            <div class="form-group" id="form">
-                                <input type="text" class="form-control" name="username" id="username" placeholder="Username"
-                                       [(ngModel)]="username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="password" id="password" placeholder="Password"
-                                       [(ngModel)]="password">
-                            </div>
-                            </p>
-                            <div class="form-check">
-                                <label class="form-check-label" for="rememberMe">
-                                    <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
-                                    <span jhiTranslate="login.form.rememberme"> Remember me</span>
-                                </label>
-                            </div>
-                            <br>
-                            <button type="submit" class="boton2" jhiTranslate="login.form.button">Iniciar sesión</button>
-                        </form>
-                        <p></p>
-
-                        <br>
-
-                        <p>
-
-                        </p>
-
-                    </div>
-                    <div class="col-md-6">
-                        <div class="social">
-                            <br><br>
-
-                            <a class="alert" (click)="requestResetPassword()" jhiTranslate="login.password.forgot">¿Olvidaste la <strong>contraseña?</strong></a><br>
-                            <a href="#login-controls" class="reg" (click)="register()"   ng-hide="formVisibility" role="button" jhiTranslate="global.messages.info.register.noaccount">¿No eres usuario? <strong jhiTranslate="global.messages.info.register.link">¡Regístrate!</strong></a>
-                        </div>
-                    </div>
-                </div>
+<div class="modal-body">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div class="alert alert-danger" *ngIf="authenticationError">
+                <strong>Failed to sign in!</strong> Please check your credentials and try again.
             </div>
-        </ng-template>
-    </ngb-tab>
-    <ngb-tab>
-        <ng-template ngbTabTitle><a href="#login-controls" id="registro"(click)="register()" ng-hide="formVisibility" role="button">REGISTER</a></ng-template>
-    </ngb-tab>
-</ngb-tabset>
-
-
+        </div>
+        <div class="col-md-6">
+            <form class="form" role="form" (ngSubmit)="login()">
+                <div class="form-group">
+                    <label for="username">Login</label>
+                    <input type="text" class="form-control" name="username" id="username" placeholder="Your username"
+                           [(ngModel)]="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Your password"
+                           [(ngModel)]="password">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label" for="rememberMe">
+                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
+                        <span>Remember me</span>
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
+            <p></p>
+            <div class="alert alert-warning">
+                <a class="alert-link" (click)="requestResetPassword()">Did you forget your password?</a>
+            </div>
+            <div class="alert alert-warning">
+                <span>You don't have an account yet?</span>
+                <a class="alert-link" (click)="register()">Register a new account</a>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <br/>
+            <jhi-social provider="google"></jhi-social>
+            <jhi-social provider="facebook"></jhi-social>
+            <jhi-social provider="twitter"></jhi-social>
+            <!-- jhipster-needle-add-social-button -->
+        </div>
+    </div>
+</div>
