--- a/src/main/webapp/app/shared/login/login.css
+++ b/src/main/webapp/app/shared/login/login.css
@@ -1,201 +1,255 @@
+/* ==============================================================
+Bootstrap tweaks
+===============================================================*/
 
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
-
-.logo {
-    text-align: center;
-    padding: 35px 0 10px;
-    background-color: #d6cece!important;
+body, h1, h2, h3, h4 {
+    font-weight: 300;
 }
 
-.body{
-    background-color: black!important;
-    color:white!important;
-}
-.body2{
-    text-align: -webkit-center!important;
+body {
+    background: #e4e5e6;
 }
 
-
-.form-control{
-    border-radius: 5px!important;
-    height: 35px!important;
-    color:black!important;
-    width: 200px!important;
-    font-family: Oswald, sans-serif;
-    font-style: italic!important;
-    font-size: 14px!important;
-
-}
-.form-check-input{
-    position:relative!important;
+a {
+    color: #533f03;
+    font-weight: bold;
 }
 
-.alert:hover{
-    text-decoration: underline!important;
-
-}
-.alert-warning {
-    color: #856404!important;
-    background-color: white!important;
-    border-color: #ffffff!important;
-
+a:hover {
+    color: #533f03;
+    font-weight: bold;
 }
 
-.modal-body{
-    background-color: black!important;
-
+/* ==========================================================================
+Browser Upgrade Prompt
+========================================================================== */
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
 }
 
-.btn block success{
-    background: green!important;
-    color:white!important;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.3)!important;
+/* ==========================================================================
+Generic styles
+========================================================================== */
 
+/* Error highlight on input fields */
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid green;
 }
 
-a{
-    font-size:12px!important;
-    cursor: pointer!important;
-    color:white!important;
+.ng-invalid:not(form)  {
+    border-left: 5px solid red;
 }
 
-a:hover{
-    text-decoration: underline;
-}
-button:hover{
-    -webkit-box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
-    -moz-box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
-    box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
-    cursor:pointer;
+/* other generic styles */
 
+.jh-card {
+    padding: 1.5%;
+    margin-top: 20px;
+    border: none;
 }
 
-span{
-    color:white!important;
-    font-size: 12px!important;
-}
-
-.social>.fb {
-    background: #4862a3;
-    color:white;
-    width: 101%!important;
-}
-
-.social>.google {
-    background: #dd4c3a;
-    color:white;
-    width: 101%!important;
-}
-
-.modal-header{
-    display: inherit!important;
-    padding: 0px!important;
-}
-
-.text-danger{
-    color:red!important;
-}
-
-.boton1{
-    color:white!important;
-    background-color: #877CA7!important;
-}
-
-.boton2 {
-    background: #b5cd60;
-    border: 0;
-    width: 250px;
-    height: 40px;
-    border-radius: 3px;
+.error {
     color: white;
+    background-color: red;
+}
+
+.pad {
+    padding: 10px;
+}
+
+.w-40 {
+    width: 40% !important;
+}
+
+.w-60 {
+    width: 60% !important;
+}
+
+.break {
+    white-space: normal;
+    word-break:break-all;
+}
+
+.readonly {
+    background-color: #eee;
+    opacity: 1;
+}
+
+.footer {
+    border-top: 1px solid rgba(0,0,0,.125);
+}
+
+/* ==========================================================================
+make sure browsers use the pointer cursor for anchors, even with no href
+========================================================================== */
+a:hover {
     cursor: pointer;
-    transition: background 0.3s ease-in-out;
-    margin-left: 104px!important;
-    margin-top: 0px!important;
-}
-.boton2:hover {
-    background: #16aa56;
-}
-#close{
-    color:black!important;
-
-}
-#close:hover{
-    color: red!important;
-
 }
 
-.b {
-    background: #b5cd60;
+.hand, [jhisortby] {
+    cursor: pointer;
+}
+
+/* ==========================================================================
+Custom alerts for notification
+========================================================================== */
+.alerts .alert{
+    text-overflow: ellipsis;
+}
+.alert pre{
+    background: none;
+    border: none;
+    font: inherit;
+    color: inherit;
+    padding: 0;
+    margin: 0;
+}
+
+.alert .popover pre {
+    font-size: 10px;
+}
+
+.alerts .toast {
+    position: fixed;
+    width: 100%;
+}
+
+.alerts .toast.left {
+    left: 5px;
+}
+
+.alerts .toast.right {
+    right: 5px;
+}
+
+.alerts .toast.top {
+    top: 55px;
+}
+
+.alerts .toast.bottom {
+    bottom: 55px;
+}
+
+@media screen and (min-width: 480px) {
+    .alerts .toast {
+        width: 50%;
+    }
+}
+
+/* ==========================================================================
+entity tables helpers
+========================================================================== */
+/* Remove Bootstrap padding from the element
+   http://stackoverflow.com/questions/19562903/remove-padding-from-columns-in-bootstrap-3 */
+.no-padding-left { padding-left: 0 !important; }
+.no-padding-right { padding-right: 0 !important; }
+.no-padding-top { padding-top: 0 !important; }
+.no-padding-bottom { padding-bottom: 0 !important; }
+.no-padding { padding: 0 !important; }
+
+/* bootstrap 3 input-group 100% width
+   http://stackoverflow.com/questions/23436430/bootstrap-3-input-group-100-width */
+.width-min { width: 1% !important; }
+
+/* Makes toolbar not wrap on smaller screens
+ http://www.sketchingwithcss.com/samplechapter/cheatsheet.html#right */
+.flex-btn-group-container {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+}
+
+/* ==========================================================================
+entity detail page css
+========================================================================== */
+.row.jh-entity-details > dd {
+    margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+    .row.jh-entity-details > dt {
+        margin-bottom: 15px;
+    }
+
+    .row.jh-entity-details > dd {
+        border-bottom: 1px solid #eee;
+        padding-left: 180px;
+        margin-left: 0;
+    }
+}
+
+/* ==========================================================================
+ui bootstrap tweaks
+========================================================================== */
+.nav, .pagination, .carousel, .card-title a {
+    cursor: pointer;
+}
+
+.datetime-picker-dropdown > li.date-picker-menu div > table .btn-secondary,
+.uib-datepicker-popup  > li > div.uib-datepicker > table .btn-secondary {
     border: 0;
-    width: 250px;
-    height: 40px;
-    border-radius: 3px;
-    color: white;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
-    margin-left: -19%!important;
-    margin-top: 0px!important;
-}
-.b:hover {
-    background: #16aa56;
 }
 
-.alert{
-    padding:0!important;
+.datetime-picker-dropdown > li.date-picker-menu div > table:focus,
+.uib-datepicker-popup  > li > div.uib-datepicker > table:focus {
+    outline: none;
 }
 
-
-.uno{
-    background-color:black!important;
-    color:white!important;
+.thread-dump-modal-lock {
+    max-width: 450px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
+/* ==========================================================================
+Social Buttons
+========================================================================== */
 
-.nav nav-tabs justify-content-start{
-    color:blue!important;
-    background-color:blue!important;
-}
-
-.col-md-4{
-    margin-left: 26%!important;
-}
-.alert-danger{
-    color:red!important;
-    background-color: black!important;
-    border-color: black!important;
+.jh-btn-social {
+    margin-bottom: 5px;
 }
 
-#registro{
-    bakground-color: white!important;
-    color: grey!important;
-    text-decoration: none!important;
+.jh-btn-google {
+    background-color: #dd4b39;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
 }
 
-@media only screen and (max-width: 700px) {
-    .boton2 {
-        margin-left: 22%!important;
-    }
-#password{
-    margin-left: 27%!important;
-}
-#username{
-    margin-left: 14px!important;
-}
-#rememberMe{
-    margin-left: 5px!important;
+.jh-btn-google:hover, .jh-btn-google:focus, .jh-btn-google:active, .jh-btn-google.active, .open > .dropdown-toggle.jh-btn-google {
+    background-color: #c23321;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
 }
 
-#form{
-    margin-left: 24%!important;
+.jh-btn-facebook {
+    background-color: #3b5998;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
 }
-    a{
-        margin-left: 26%!important;
-    }
-    .social{
-        margin-top: -45px!important;
-    }
-    .form-check-label{
-        margin-left: 24%!important;
-    }
+
+.jh-btn-facebook:hover, .jh-btn-facebook:focus, .jh-btn-facebook:active, .jh-btn-facebook.active, .open > .dropdown-toggle.jh-btn-facebook {
+    background-color: #2d4373;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
 }
+
+.jh-btn-twitter {
+    background-color: #55acee;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+
+.jh-btn-twitter:hover, .jh-btn-twitter:focus, .jh-btn-twitter:active, .jh-btn-twitter.active, .open > .dropdown-toggle.jh-btn-twitter {
+    background-color: #2795e9;
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+/* jhipster-needle-css-add-main JHipster will add new css style */
+
