--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,24 +1,47 @@
-
-<div id="fh5co-page">
+<div id="fh5co-page" [ngSwitch]="isAuthenticated()">
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"></a>
     <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
         <h1 id="fh5co-logo" class="mx-2">
             <a href="/"><img src="../../../content/images/logo.png" height="200px" width="200px"/></a>
         </h1>
-        <nav id="fh5co-main-menu" role="navigation" [ngSwitch]="isAuthenticated()">
+        <div *ngSwitchCase="false">
+            <form class="form" role="form" (ngSubmit)="login()">
+                <div class="form-group">
+                    <label for="username">Login</label>
+                    <input type="text" class="form-control" name="username" id="username" placeholder="Your username"
+                           [(ngModel)]="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" name="password" id="password"
+                           placeholder="Your password"
+                           [(ngModel)]="password">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label" for="rememberMe">
+                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe"
+                               [(ngModel)]="rememberMe" checked>
+                        <span>Remember me</span>
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
+        </div>
+        <nav id="fh5co-main-menu" role="navigation">
             <ul>
                 <li *ngSwitchCase="true">
                     <a routerLink="pagehome-phome" routerLinkActive="active">Tendencias</a>
                 </li>
                 <li *ngSwitchCase="true">
-                    <a routerLink="pagesong-pages" routerLinkActive="active">Artistas</a>
+                    <a routerLink="pagesong-pages" routerLinkActive="active">Mi Coleccion</a>
                 </li>
                 <li *ngSwitchCase="true">
                     <a routerLink="pageartist-pages" routerLinkActive="active">Canciones</a>
                 </li>
 
                 <div class="btn-group dropright">
-                    <button  type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                         Account
                     </button>
                     <div class="dropdown-menu">
@@ -28,23 +51,27 @@
                             </a>
                         </li>
                         <li *ngSwitchCase="false">
-                            <a class="dropdown-item" routerLink="register" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="register" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.account.register">Register</span>
                             </a>
                         </li>
 
                         <li *ngSwitchCase="true">
-                            <a class="dropdown-item" routerLink="settings" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="settings" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.account.settings">Settings</span>
                             </a>
                         </li>
                         <li *ngSwitchCase="true">
-                            <a class="dropdown-item" routerLink="password" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="password" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.account.password">Password</span>
                             </a>
                         </li>
                         <li *ngSwitchCase="true">
-                            <a class="dropdown-item" routerLink="sessions" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="sessions" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span>Sessions</span>
                             </a>
                         </li>
@@ -56,35 +83,44 @@
                     </div>
                 </div>
 
-                <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"
+                    routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <div class="btn-group dropright">
-                        <button  type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
                             Administrate
                         </button>
                         <div class="dropdown-menu">
                             <!-- Dropdown menu links -->
-                            <a class="dropdown-item" routerLink="user-management" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="user-management" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.userManagement">User management</span>
                             </a>
-                            <a class="dropdown-item" routerLink="jhi-metrics" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="jhi-metrics" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.metrics">Metrics</span>
                             </a>
-                            <a class="dropdown-item" routerLink="jhi-health" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="jhi-health" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.health">Health</span>
                             </a>
-                            <a class="dropdown-item" routerLink="jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="jhi-configuration" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.configuration">Configuration</span>
                             </a>
-                            <a class="dropdown-item" routerLink="audits" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="audits" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.audits">Audits</span>
                             </a>
-                            <a class="dropdown-item" routerLink="logs" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="logs" routerLinkActive="active"
+                               (click)="collapseNavbar()">
                                 <span jhiTranslate="global.menu.admin.logs">Logs</span>
                             </a>
                             <!--<li *ngIf="swaggerEnabled">-->
-                                <a class="dropdown-item" routerLink="docs" routerLinkActive="active" (click)="collapseNavbar()">
-                                    <span jhiTranslate="global.menu.admin.apidocs">API</span>
-                                </a>
+                            <a class="dropdown-item" routerLink="docs" routerLinkActive="active"
+                               (click)="collapseNavbar()">
+                                <span jhiTranslate="global.menu.admin.apidocs">API</span>
+                            </a>
                             <!--</li>-->
 
                         </div>
