--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -35,9 +35,8 @@
                 <li *ngSwitchCase="true">
                     <a routerLink="pageartist-pages" routerLinkActive="active">Mi Coleccion</a>
                 </li>
-               <!-- <li *ngSwitchCase="true">
-                    <a routerLink="pasesong-pages" routerLinkActive="active">Canciones</a>
-                </li>-->
+               <li *ngSwitchCase="true">
+                    <a routerLink="pageregister-pages" routerLinkActive="active">Busqueda</a>
                 <li *ngSwitchCase="true">
                     <a class="dropdown-item" (click)="logout()" id="logout">
                         <span jhiTranslate="global.menu.account.logout">Sign out</span>
@@ -50,7 +49,7 @@
                         <span jhiTranslate="global.menu.account.register">Register</span>
                     </a>
                 </li>
-                <div class="btn-group dropright" *ngSwitchCase="true">
+                <div class="btn-group dropright menu1" *ngSwitchCase="true">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                         Account
@@ -72,7 +71,7 @@
 
                 <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"
                     routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                    <div class="btn-group dropright">
+                    <div class="btn-group dropright menu1">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                             Administration
