--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -6,14 +6,19 @@
 
 .fondo{
     background-size: cover;
-    background-color: #b2bec3!important;
+    background-color: whitesmoke!important;
     float:right!important;
     width:85%!important;
     display: none;
-    font-family: Oswald, sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-size: 100%;
+}
+
+.fondo1 {
+    font-size: 150%;
 }
 a{
-    font-family: Oswald, sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 #imaginary_container{
     margin-top:5%;
@@ -242,17 +247,6 @@ button:hover{
     box-shadow: 0px 0px 30px 4px rgb(255, 0, 10);
     cursor:pointer;
 }
-
-
-.boton2{
-    color:white!important;
-    background-color: green!important;
-    margin-left: 40%!important;
-}
-
-
-
-
 
 .boton2{
     color:white!important;
@@ -546,6 +540,7 @@ a.article, a.article:hover {
 
 .picture-grid {
     margin-left: 5%;
+    background-color: whitesmoke!important;
 }
 
 
